add edit accessories
