# server/swagger-output.json
@@ -731,6 +731,92 @@
         }
       }
     },
+    "/accessories/{id}/edit": {
+      "put": {
+        "tags": [
+          "Accessories"
+        ],
+        "summary": "Edit an existing accessory",
+        "description": "Updates the details of an existing accessory by its ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "Accessory ID",
+            "example": "67dfcb5138afc23bf8cff336"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Accessory updated successfully"
+          },
+          "400": {
+            "description": "Invalid request"
+          },
+          "404": {
+            "description": "Accessory not found"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "name",
+                  "description",
+                  "type",
+                  "price",
+                  "photo",
+                  "owner"
+                ],
+                "properties": {
+                  "name": {
+                    "type": "string",
+                    "example": "1000% bag"
+                  },
+                  "description": {
+                    "type": "string",
+                    "example": "Big bag for 1000%"
+                  },
+                  "type": {
+                    "type": "string",
+                    "example": "67c91d9583ff104caa240546"
+                  },
+                  "price": {
+                    "type": "number",
+                    "example": 59.99
+                  },
+                  "photo": {
+                    "type": "array",
+                    "format": "url",
+                    "example": "https://example3.com"
+                  },
+                  "status": {
+                    "type": "string",
+                    "example": ""
+                  },
+                  "date_added": {
+                    "type": "string",
+                    "format": "date-time",
+                    "example": ""
+                  },
+                  "owner": {
+                    "type": "string",
+                    "example": "67bca3f6207e4b98d3665a9f"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/accessories/newCategory": {
       "post": {
         "tags": [
